--- a/CustomInlineHelper/Views/Web.config
+++ b/CustomInlineHelper/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="CustomInlineHelper" />
+        <add namespace="CustomInlineHelper.Helpers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
